# aguiDemo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  REFERENCE-ONLY.md  TODO.md  docker-compose.yml
.agents/: AGENTS.md
.agents/rules/: 00-start-here.md  20-verify.md  (+4 more)
.claude/: settings.json
agents/: README.md  __init__.py  _common.py  content_studio.py  data_analyst.py  doc_writer.py  growth_analyst.py  incident_commander.py  math_coach.py  platform_architect.py  registry.py  research_assistant.py  research_desk.py  support_triage.py  travel_concierge.py  trip_architect.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: base.py  events.py  factory.py  graph.py  llm_agent.py  mock.py  tools.py
backend/app/agui/: catalog.py  lint.py  resume.py  run_capture.py  translator.py
backend/app/api/: agents.py  agui_router.py  conversations.py
backend/app/auth/: entra.py
backend/app/config/: settings.py
backend/app/db/: models.py  repository.py  session.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  marketplace.py  openai_compatible.py  openai_provider.py
backend/app/logging/: setup.py
backend/scripts/: smoke_e2e.py
backend/tests/: test_durable_hitl.py  test_event_order.py  test_llm_providers.py  test_llm_tools.py
docs/: FINDINGS.md  PROJECT_STATUS_AND_ROADMAP.md  sample_run_log.jsonl
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
resources/: CHANGELOG.md  HANDOFF.md  README.md
scripts/: check_env.sh
(+68 files in other folders)
