[project]
name = "agui-demo-backend"
version = "0.1.0"
description = "AG-UI demo backend, FastAPI + LangGraph, streaming AG-UI events over SSE"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "ag-ui-protocol==0.1.19",
    "langgraph>=0.2.60,<0.3",
    "langchain-core>=0.3.29,<0.4",
    "httpx>=0.28,<0.29",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "python-jose[cryptography]>=3.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "aiosqlite==0.20.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
